cmake_minimum_required(VERSION 3.10)
project(CSCI_366_Programming_Assignments)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cereal)
include_directories(cereal/doc)
include_directories(cereal/include)
include_directories(cereal/include/cereal)
include_directories(cereal/include/cereal/archives)
include_directories(cereal/include/cereal/details)
include_directories(cereal/include/cereal/external)
include_directories(cereal/include/cereal/external/rapidjson)
include_directories(cereal/include/cereal/external/rapidjson/error)
include_directories(cereal/include/cereal/external/rapidjson/internal)
include_directories(cereal/include/cereal/external/rapidjson/msinttypes)
include_directories(cereal/include/cereal/external/rapidxml)
include_directories(cereal/include/cereal/types)
include_directories(cereal/include/cereal/types/concepts)
include_directories(cereal/sandbox)
include_directories(cereal/sandbox/sandbox_shared_lib)
include_directories(cereal/scripts)
include_directories(cereal/unittests)
include_directories(cereal/unittests/boost)
include_directories(cereal/unittests/cpp17)
include_directories(dtl)
include_directories(dtl/dtl)
include_directories(dtl/examples)
include_directories(dtl/test)
include_directories(googletest/googlemock)
include_directories(googletest/googlemock/include)
include_directories(googletest/googlemock/include/gmock)
include_directories(googletest/googlemock/include/gmock/internal)
include_directories(googletest/googlemock/include/gmock/internal/custom)
include_directories(googletest/googlemock/src)
include_directories(googletest/googlemock/test)
include_directories(googletest/googletest)
include_directories(googletest/googletest/include)
include_directories(googletest/googletest/include/gtest)
include_directories(googletest/googletest/include/gtest/internal)
include_directories(googletest/googletest/include/gtest/internal/custom)
include_directories(googletest/googletest/samples)
include_directories(googletest/googletest/src)
include_directories(googletest/googletest/test)
include_directories(images)
include_directories(src)
include_directories(test)

add_executable(CSCI_366_Programming_Assignments
        cereal/doc/CMakeLists.txt
        cereal/doc/doxygen.in
        cereal/doc/DoxygenLayout.xml
        cereal/doc/footer.html
        cereal/doc/mainpage.dox
        cereal/include/cereal/archives/adapters.hpp
        cereal/include/cereal/archives/binary.hpp
        cereal/include/cereal/archives/json.hpp
        cereal/include/cereal/archives/portable_binary.hpp
        cereal/include/cereal/archives/xml.hpp
        cereal/include/cereal/details/helpers.hpp
        cereal/include/cereal/details/polymorphic_impl.hpp
        cereal/include/cereal/details/polymorphic_impl_fwd.hpp
        cereal/include/cereal/details/static_object.hpp
        cereal/include/cereal/details/traits.hpp
        cereal/include/cereal/details/util.hpp
        cereal/include/cereal/external/rapidjson/error/en.h
        cereal/include/cereal/external/rapidjson/error/error.h
        cereal/include/cereal/external/rapidjson/internal/biginteger.h
        cereal/include/cereal/external/rapidjson/internal/diyfp.h
        cereal/include/cereal/external/rapidjson/internal/dtoa.h
        cereal/include/cereal/external/rapidjson/internal/ieee754.h
        cereal/include/cereal/external/rapidjson/internal/itoa.h
        cereal/include/cereal/external/rapidjson/internal/meta.h
        cereal/include/cereal/external/rapidjson/internal/pow10.h
        cereal/include/cereal/external/rapidjson/internal/regex.h
        cereal/include/cereal/external/rapidjson/internal/stack.h
        cereal/include/cereal/external/rapidjson/internal/strfunc.h
        cereal/include/cereal/external/rapidjson/internal/strtod.h
        cereal/include/cereal/external/rapidjson/internal/swap.h
        cereal/include/cereal/external/rapidjson/msinttypes/inttypes.h
        cereal/include/cereal/external/rapidjson/msinttypes/stdint.h
        cereal/include/cereal/external/rapidjson/allocators.h
        cereal/include/cereal/external/rapidjson/cursorstreamwrapper.h
        cereal/include/cereal/external/rapidjson/document.h
        cereal/include/cereal/external/rapidjson/encodedstream.h
        cereal/include/cereal/external/rapidjson/encodings.h
        cereal/include/cereal/external/rapidjson/filereadstream.h
        cereal/include/cereal/external/rapidjson/filewritestream.h
        cereal/include/cereal/external/rapidjson/fwd.h
        cereal/include/cereal/external/rapidjson/istreamwrapper.h
        cereal/include/cereal/external/rapidjson/memorybuffer.h
        cereal/include/cereal/external/rapidjson/memorystream.h
        cereal/include/cereal/external/rapidjson/ostreamwrapper.h
        cereal/include/cereal/external/rapidjson/pointer.h
        cereal/include/cereal/external/rapidjson/prettywriter.h
        cereal/include/cereal/external/rapidjson/rapidjson.h
        cereal/include/cereal/external/rapidjson/reader.h
        cereal/include/cereal/external/rapidjson/schema.h
        cereal/include/cereal/external/rapidjson/stream.h
        cereal/include/cereal/external/rapidjson/stringbuffer.h
        cereal/include/cereal/external/rapidjson/writer.h
        cereal/include/cereal/external/rapidxml/rapidxml.hpp
        cereal/include/cereal/external/rapidxml/rapidxml_iterators.hpp
        cereal/include/cereal/external/rapidxml/rapidxml_print.hpp
        cereal/include/cereal/external/rapidxml/rapidxml_utils.hpp
        cereal/include/cereal/external/base64.hpp
        cereal/include/cereal/types/concepts/pair_associative_container.hpp
        cereal/include/cereal/types/array.hpp
        cereal/include/cereal/types/atomic.hpp
        cereal/include/cereal/types/base_class.hpp
        cereal/include/cereal/types/bitset.hpp
        cereal/include/cereal/types/boost_variant.hpp
        cereal/include/cereal/types/chrono.hpp
        cereal/include/cereal/types/common.hpp
        cereal/include/cereal/types/complex.hpp
        cereal/include/cereal/types/deque.hpp
        cereal/include/cereal/types/forward_list.hpp
        cereal/include/cereal/types/functional.hpp
        cereal/include/cereal/types/list.hpp
        cereal/include/cereal/types/map.hpp
        cereal/include/cereal/types/memory.hpp
        cereal/include/cereal/types/optional.hpp
        cereal/include/cereal/types/polymorphic.hpp
        cereal/include/cereal/types/queue.hpp
        cereal/include/cereal/types/set.hpp
        cereal/include/cereal/types/stack.hpp
        cereal/include/cereal/types/string.hpp
        cereal/include/cereal/types/tuple.hpp
        cereal/include/cereal/types/unordered_map.hpp
        cereal/include/cereal/types/unordered_set.hpp
        cereal/include/cereal/types/utility.hpp
        cereal/include/cereal/types/valarray.hpp
        cereal/include/cereal/types/variant.hpp
        cereal/include/cereal/types/vector.hpp
        cereal/include/cereal/access.hpp
        cereal/include/cereal/cereal.hpp
        cereal/include/cereal/macros.hpp
        cereal/include/cereal/specialize.hpp
        cereal/include/cereal/version.hpp
        cereal/sandbox/sandbox_shared_lib/base.cpp
        cereal/sandbox/sandbox_shared_lib/base.hpp
        cereal/sandbox/sandbox_shared_lib/derived.cpp
        cereal/sandbox/sandbox_shared_lib/derived.hpp
        cereal/sandbox/performance.cpp
        cereal/sandbox/sandbox.cpp
        cereal/sandbox/sandbox_json.cpp
        cereal/sandbox/sandbox_rtti.cpp
        cereal/sandbox/sandbox_vs.cpp
        cereal/scripts/add_rapidjson_prefix.sh
        cereal/scripts/appveyor.bat
        cereal/scripts/renameincludes.sh
        cereal/scripts/updatecoverage.sh
        cereal/scripts/updatedoc.in
        cereal/unittests/boost/boost_variant.cpp
        cereal/unittests/boost/boost_variant.hpp
        cereal/unittests/cpp17/optional.cpp
        cereal/unittests/cpp17/optional.hpp
        cereal/unittests/cpp17/variant.cpp
        cereal/unittests/cpp17/variant.hpp
        cereal/unittests/array.cpp
        cereal/unittests/array.hpp
        cereal/unittests/atomic.cpp
        cereal/unittests/atomic.hpp
        cereal/unittests/basic_string.cpp
        cereal/unittests/basic_string.hpp
        cereal/unittests/bitset.cpp
        cereal/unittests/bitset.hpp
        cereal/unittests/chrono.cpp
        cereal/unittests/chrono.hpp
        cereal/unittests/common.hpp
        cereal/unittests/complex.cpp
        cereal/unittests/complex.hpp
        cereal/unittests/defer.cpp
        cereal/unittests/defer.hpp
        cereal/unittests/deque.cpp
        cereal/unittests/deque.hpp
        cereal/unittests/doctest.h
        cereal/unittests/forward_list.cpp
        cereal/unittests/forward_list.hpp
        cereal/unittests/list.cpp
        cereal/unittests/list.hpp
        cereal/unittests/load_construct.cpp
        cereal/unittests/load_construct.hpp
        cereal/unittests/map.cpp
        cereal/unittests/map.hpp
        cereal/unittests/memory.cpp
        cereal/unittests/memory.hpp
        cereal/unittests/memory_cycles.cpp
        cereal/unittests/memory_cycles.hpp
        cereal/unittests/multimap.cpp
        cereal/unittests/multimap.hpp
        cereal/unittests/multiset.cpp
        cereal/unittests/multiset.hpp
        cereal/unittests/pair.cpp
        cereal/unittests/pair.hpp
        cereal/unittests/pod.cpp
        cereal/unittests/pod.hpp
        cereal/unittests/polymorphic.cpp
        cereal/unittests/polymorphic.hpp
        cereal/unittests/portability_test.cpp
        cereal/unittests/portable_binary_archive.cpp
        cereal/unittests/portable_binary_archive.hpp
        cereal/unittests/priority_queue.cpp
        cereal/unittests/priority_queue.hpp
        cereal/unittests/queue.cpp
        cereal/unittests/queue.hpp
        cereal/unittests/set.cpp
        cereal/unittests/set.hpp
        cereal/unittests/stack.cpp
        cereal/unittests/stack.hpp
        cereal/unittests/structs.cpp
        cereal/unittests/structs.hpp
        cereal/unittests/structs_minimal.cpp
        cereal/unittests/structs_minimal.hpp
        cereal/unittests/structs_specialized.cpp
        cereal/unittests/structs_specialized.hpp
        cereal/unittests/tuple.cpp
        cereal/unittests/tuple.hpp
        cereal/unittests/unordered_loads.cpp
        cereal/unittests/unordered_loads.hpp
        cereal/unittests/unordered_map.cpp
        cereal/unittests/unordered_map.hpp
        cereal/unittests/unordered_multimap.cpp
        cereal/unittests/unordered_multimap.hpp
        cereal/unittests/unordered_multiset.cpp
        cereal/unittests/unordered_multiset.hpp
        cereal/unittests/unordered_set.cpp
        cereal/unittests/unordered_set.hpp
        cereal/unittests/user_data_adapters.cpp
        cereal/unittests/user_data_adapters.hpp
        cereal/unittests/valarray.cpp
        cereal/unittests/valarray.hpp
        cereal/unittests/vector.cpp
        cereal/unittests/vector.hpp
        cereal/unittests/versioning.cpp
        cereal/unittests/versioning.hpp
        cereal/.gitignore
        cereal/.travis.yml
        cereal/appveyor.yml
        cereal/CMakeLists.txt
        cereal/LICENSE
        cereal/README.md
        dtl/dtl/Diff.hpp
        dtl/dtl/Diff3.hpp
        dtl/dtl/dtl.hpp
        dtl/dtl/functors.hpp
        dtl/dtl/Lcs.hpp
        dtl/dtl/Sequence.hpp
        dtl/dtl/Ses.hpp
        dtl/dtl/variables.hpp
        dtl/examples/bdiff.cpp
        dtl/examples/common.cpp
        dtl/examples/common.hpp
        dtl/examples/fpatch.cpp
        dtl/examples/intdiff.cpp
        dtl/examples/intdiff3.cpp
        dtl/examples/patch.cpp
        dtl/examples/printers.hpp
        dtl/examples/st2ses.cpp
        dtl/examples/strdiff.cpp
        dtl/examples/strdiff3.cpp
        dtl/examples/strdiff_cp.cpp
        dtl/examples/unidiff.cpp
        dtl/examples/unistrdiff.cpp
        dtl/test/comparators.hpp
        dtl/test/dtl_test.cpp
        dtl/test/dtl_test_common.cpp
        dtl/test/dtl_test_common.hpp
        dtl/test/Intdifftest.cpp
        dtl/test/Objdifftest.cpp
        dtl/test/Patchtest.cpp
        dtl/test/Strdiff3test.cpp
        dtl/test/Strdifftest.cpp
        dtl/.gitignore
        dtl/.travis.yml
        dtl/ChangeLog
        dtl/CONTRIBUTORS
        dtl/COPYING
        dtl/README.md
        dtl/SConstruct
        googletest/ci/build-linux-bazel.sh
        googletest/ci/build-platformio.sh
        googletest/ci/env-linux.sh
        googletest/ci/env-osx.sh
        googletest/ci/get-nprocessors.sh
        googletest/ci/install-linux.sh
        googletest/ci/install-osx.sh
        googletest/ci/install-platformio.sh
        googletest/ci/log-config.sh
        googletest/ci/travis.sh
        googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        googletest/googlemock/include/gmock/internal/custom/gmock-port.h
        googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
        googletest/googlemock/include/gmock/internal/gmock-port.h
        googletest/googlemock/include/gmock/internal/gmock-pp.h
        googletest/googlemock/include/gmock/gmock-actions.h
        googletest/googlemock/include/gmock/gmock-cardinalities.h
        googletest/googlemock/include/gmock/gmock-function-mocker.h
        googletest/googlemock/include/gmock/gmock-generated-actions.h
        googletest/googlemock/include/gmock/gmock-generated-function-mockers.h
        googletest/googlemock/include/gmock/gmock-generated-matchers.h
        googletest/googlemock/include/gmock/gmock-matchers.h
        googletest/googlemock/include/gmock/gmock-more-actions.h
        googletest/googlemock/include/gmock/gmock-more-matchers.h
        googletest/googlemock/include/gmock/gmock-nice-strict.h
        googletest/googlemock/include/gmock/gmock-spec-builders.h
        googletest/googlemock/include/gmock/gmock.h
        googletest/googlemock/src/gmock-all.cc
        googletest/googlemock/src/gmock-cardinalities.cc
        googletest/googlemock/src/gmock-internal-utils.cc
        googletest/googlemock/src/gmock-matchers.cc
        googletest/googlemock/src/gmock-spec-builders.cc
        googletest/googlemock/src/gmock.cc
        googletest/googlemock/src/gmock_main.cc
        googletest/googlemock/test/gmock-actions_test.cc
        googletest/googlemock/test/gmock-cardinalities_test.cc
        googletest/googlemock/test/gmock-function-mocker_nc.cc
        googletest/googlemock/test/gmock-function-mocker_test.cc
        googletest/googlemock/test/gmock-generated-actions_test.cc
        googletest/googlemock/test/gmock-generated-function-mockers_test.cc
        googletest/googlemock/test/gmock-generated-matchers_test.cc
        googletest/googlemock/test/gmock-internal-utils_test.cc
        googletest/googlemock/test/gmock-matchers_test.cc
        googletest/googlemock/test/gmock-more-actions_test.cc
        googletest/googlemock/test/gmock-nice-strict_test.cc
        googletest/googlemock/test/gmock-port_test.cc
        googletest/googlemock/test/gmock-pp-string_test.cc
        googletest/googlemock/test/gmock-pp_test.cc
        googletest/googlemock/test/gmock-spec-builders_test.cc
        googletest/googlemock/test/gmock_all_test.cc
        googletest/googlemock/test/gmock_ex_test.cc
        googletest/googlemock/test/gmock_leak_test_.cc
        googletest/googlemock/test/gmock_link2_test.cc
        googletest/googlemock/test/gmock_link_test.cc
        googletest/googlemock/test/gmock_link_test.h
        googletest/googlemock/test/gmock_output_test_.cc
        googletest/googlemock/test/gmock_stress_test.cc
        googletest/googlemock/test/gmock_test.cc
        googletest/googletest/include/gtest/internal/custom/gtest-port.h
        googletest/googletest/include/gtest/internal/custom/gtest-printers.h
        googletest/googletest/include/gtest/internal/custom/gtest.h
        googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
        googletest/googletest/include/gtest/internal/gtest-filepath.h
        googletest/googletest/include/gtest/internal/gtest-internal.h
        googletest/googletest/include/gtest/internal/gtest-param-util.h
        googletest/googletest/include/gtest/internal/gtest-port-arch.h
        googletest/googletest/include/gtest/internal/gtest-port.h
        googletest/googletest/include/gtest/internal/gtest-string.h
        googletest/googletest/include/gtest/internal/gtest-type-util.h
        googletest/googletest/include/gtest/gtest-death-test.h
        googletest/googletest/include/gtest/gtest-matchers.h
        googletest/googletest/include/gtest/gtest-message.h
        googletest/googletest/include/gtest/gtest-param-test.h
        googletest/googletest/include/gtest/gtest-printers.h
        googletest/googletest/include/gtest/gtest-spi.h
        googletest/googletest/include/gtest/gtest-test-part.h
        googletest/googletest/include/gtest/gtest-typed-test.h
        googletest/googletest/include/gtest/gtest.h
        googletest/googletest/include/gtest/gtest_pred_impl.h
        googletest/googletest/include/gtest/gtest_prod.h
        googletest/googletest/samples/prime_tables.h
        googletest/googletest/samples/sample1.cc
        googletest/googletest/samples/sample1.h
        googletest/googletest/samples/sample10_unittest.cc
        googletest/googletest/samples/sample1_unittest.cc
        googletest/googletest/samples/sample2.cc
        googletest/googletest/samples/sample2.h
        googletest/googletest/samples/sample2_unittest.cc
        googletest/googletest/samples/sample3-inl.h
        googletest/googletest/samples/sample3_unittest.cc
        googletest/googletest/samples/sample4.cc
        googletest/googletest/samples/sample4.h
        googletest/googletest/samples/sample4_unittest.cc
        googletest/googletest/samples/sample5_unittest.cc
        googletest/googletest/samples/sample6_unittest.cc
        googletest/googletest/samples/sample7_unittest.cc
        googletest/googletest/samples/sample8_unittest.cc
        googletest/googletest/samples/sample9_unittest.cc
        googletest/googletest/src/gtest-all.cc
        googletest/googletest/src/gtest-death-test.cc
        googletest/googletest/src/gtest-filepath.cc
        googletest/googletest/src/gtest-internal-inl.h
        googletest/googletest/src/gtest-matchers.cc
        googletest/googletest/src/gtest-port.cc
        googletest/googletest/src/gtest-printers.cc
        googletest/googletest/src/gtest-test-part.cc
        googletest/googletest/src/gtest-typed-test.cc
        googletest/googletest/src/gtest.cc
        googletest/googletest/src/gtest_main.cc
        googletest/googletest/test/googletest-break-on-failure-unittest_.cc
        googletest/googletest/test/googletest-catch-exceptions-test_.cc
        googletest/googletest/test/googletest-color-test_.cc
        googletest/googletest/test/googletest-death-test-test.cc
        googletest/googletest/test/googletest-death-test_ex_test.cc
        googletest/googletest/test/googletest-env-var-test_.cc
        googletest/googletest/test/googletest-filepath-test.cc
        googletest/googletest/test/googletest-filter-unittest_.cc
        googletest/googletest/test/googletest-list-tests-unittest_.cc
        googletest/googletest/test/googletest-listener-test.cc
        googletest/googletest/test/googletest-message-test.cc
        googletest/googletest/test/googletest-options-test.cc
        googletest/googletest/test/googletest-output-test_.cc
        googletest/googletest/test/googletest-param-test-invalid-name1-test_.cc
        googletest/googletest/test/googletest-param-test-invalid-name2-test_.cc
        googletest/googletest/test/googletest-param-test-test.cc
        googletest/googletest/test/googletest-param-test-test.h
        googletest/googletest/test/googletest-param-test2-test.cc
        googletest/googletest/test/googletest-port-test.cc
        googletest/googletest/test/googletest-printers-test.cc
        googletest/googletest/test/googletest-setuptestsuite-test_.cc
        googletest/googletest/test/googletest-shuffle-test_.cc
        googletest/googletest/test/googletest-test-part-test.cc
        googletest/googletest/test/googletest-test2_test.cc
        googletest/googletest/test/googletest-throw-on-failure-test_.cc
        googletest/googletest/test/googletest-uninitialized-test_.cc
        googletest/googletest/test/gtest-typed-test2_test.cc
        googletest/googletest/test/gtest-typed-test_test.cc
        googletest/googletest/test/gtest-typed-test_test.h
        googletest/googletest/test/gtest-unittest-api_test.cc
        googletest/googletest/test/gtest_all_test.cc
        googletest/googletest/test/gtest_assert_by_exception_test.cc
        googletest/googletest/test/gtest_environment_test.cc
        googletest/googletest/test/gtest_help_test_.cc
        googletest/googletest/test/gtest_list_output_unittest_.cc
        googletest/googletest/test/gtest_main_unittest.cc
        googletest/googletest/test/gtest_no_test_unittest.cc
        googletest/googletest/test/gtest_pred_impl_unittest.cc
        googletest/googletest/test/gtest_premature_exit_test.cc
        googletest/googletest/test/gtest_prod_test.cc
        googletest/googletest/test/gtest_repeat_test.cc
        googletest/googletest/test/gtest_skip_in_environment_setup_test.cc
        googletest/googletest/test/gtest_skip_test.cc
        googletest/googletest/test/gtest_sole_header_test.cc
        googletest/googletest/test/gtest_stress_test.cc
        googletest/googletest/test/gtest_test_macro_stack_footprint_test.cc
        googletest/googletest/test/gtest_testbridge_test_.cc
        googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
        googletest/googletest/test/gtest_unittest.cc
        googletest/googletest/test/gtest_xml_outfile1_test_.cc
        googletest/googletest/test/gtest_xml_outfile2_test_.cc
        googletest/googletest/test/gtest_xml_output_unittest_.cc
        googletest/googletest/test/production.cc
        googletest/googletest/test/production.h
        googletest/.clang-format
        googletest/.gitignore
        googletest/.travis.yml
        googletest/appveyor.yml
        googletest/BUILD.bazel
        googletest/CMakeLists.txt
        googletest/CONTRIBUTING.md
        googletest/library.json
        googletest/LICENSE
        googletest/platformio.ini
        googletest/README.md
        googletest/WORKSPACE
        images/system_architecture.png
        src/Client.cpp
        src/Client.hpp
        src/client_main.cpp
        src/CMakeLists.txt
        src/common.hpp
        src/Server.cpp
        src/Server.hpp
        src/server_main.cpp
        test/CMakeLists.txt
        test/correct_fire_message.json
        test/correct_hit_action_board.json
        test/correct_hit_result.json
        test/correct_miss_action_board.json
        test/correct_miss_result.json
        test/correct_out_of_bounds_result.json
        test/correct_result_message.json
        test/correct_start_action_board.json
        test/tests.cpp
        .gitignore
        .gitmodules
        CMakeLists.txt
        LICENSE.md
        player_1.setup_board.txt
        player_2.setup_board.txt
        README.md)
